...
        android:layout_marginTop="25dp"
        android:text="@string/Acid"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnIon" />

    <TextView
        android:id="@+id/tvEster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/Ester"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnAcid" />

    <Spinner
        android:id="@+id/spnIon"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:entries="@array/ion_array"
...
        app:layout_constraintTop_toBottomOf="@+id/tvAcid"
        android:layout_marginRight="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Spinner
        android:id="@+id/spnEster"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:entries="@array/ester_array_values"
        android:layout_marginLeft="25dp"
        android:background="@drawable/border"
        app:layout_constraintLeft_toLeftOf="parent"
...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/FA"
        android:text="@string/Back"
        android:textColor="@android:color/white"
...
        android:textSize="24sp"
        style="?android:attr/buttonBarButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/FA"
        android:text="@string/Submit"
        android:textColor="@android:color/white"
...
