...
        android:layout_marginTop="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/imbtnFattyAcids"
            android:layout_width="115dp"
            android:layout_height="150dp"
            android:adjustViewBounds="false"
            android:background="@drawable/button_fa"
            android:contentDescription="@string/FAImageDesc"
            android:cropToPadding="false" />
...
            android:layout_height="150dp"
            android:adjustViewBounds="false"
            android:background="@drawable/button_sl"
            android:contentDescription="@string/FAImageDesc"
            android:cropToPadding="false" />
        <ImageButton
            android:id="@+id/imbtnCholesterylEsters"
            android:layout_width="115dp"
            android:layout_height="150dp"
            android:adjustViewBounds="false"
            android:background="@drawable/button_ce"
            android:contentDescription="@string/FAImageDesc"
            android:cropToPadding="false" />
...
