<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_glyp"
    tools:context="teamtriplej.com.lipidlator21.Glycerophospholipids_Activity">

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:background="@color/GLYP"
            android:text="@string/Back"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:background="@color/GLYP"
        android:text="@string/Submit"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        style="?android:attr/buttonBarButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



    </LinearLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="35dp"
        android:text="@string/GPLConfiguration"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ScrollView
        android:layout_width="0dp"
        android:id="@+id/scroll_view"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvIon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Ion"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spnIon"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="12dp"
        android:entries="@array/ion_array"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIon"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp" />

    <TextView
        android:id="@+id/tvHeadGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/HeadGroup"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnIon"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spnHeadGroup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="12dp"
        android:entries="@array/gly_headgroup_array_values"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeadGroup"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp" />

    <TextView
        android:id="@+id/tvsn1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sn1_1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/spnHeadGroup"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spnSn1_1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:entries="@array/sn_array"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/tvsn1_1" />

    <TextView
        android:id="@+id/tvSn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/sn2_1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnSn1_1"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spnSn2_1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="30dp"
        android:entries="@array/gp_sn_array"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSn2"
        app:layout_constraintBottom_toBottomOf="parent"/>
            </android.support.constraint.ConstraintLayout></ScrollView>
</android.support.constraint.ConstraintLayout>
